--- a/src/assets/configurations/customer-grid-configuration.json
+++ b/src/assets/configurations/customer-grid-configuration.json
@@ -1,54 +1,59 @@
-[
-    {
-        "headerName": "Account Number",
-        "field": "accountNumber"
-    },
-    {
-        "headerName": "Company Name",
-        "field": "companyName"
-    },
-    {
-        "headerName": "Contact Person",
-        "field": "contact"
-    },
-    {
-        "headerName": "Parent Company",
-        "field": "parentCompany"
-    },
-    {
-        "headerName": "Phone Number",
-        "field": "phoneNumber"
-    },
-    {
-        "headerName": "Category Name",
-        "field": "categoryName"
-    },
-    {
-        "headerName": "Cycle Name",
-        "field": "cycleName"
-    },
-    {
-        "headerName": "Price Book",
-        "field": "planName"
-    },
-    {
-        "headerName": "External Id",
-        "field": "externalAccountId"
-    },
-    {
-        "headerName": "Created Date",
-        "field": "createdDate"
-    },
-    {
-        "headerName": "Account Status",
-        "field": "accountStatus"
-    },
-    {
-        "headerName": "Billable",
-        "field": "billable"
-    },
-    {
-        "headerName": "Account Details777",
-        "field": "accountDetailDescription01"
-    }
-]
+{
+    "rowsPerPage": "10",
+    "noDataMessage": "No Customers Found",
+    "defaultGroupingColumn": "",
+    "colDefs": [
+        {
+            "headerName": "Account Number",
+            "field": "accountNumber"
+        },
+        {
+            "headerName": "Company Name",
+            "field": "companyName"
+        },
+        {
+            "headerName": "Contact Person",
+            "field": "contact"
+        },
+        {
+            "headerName": "Parent Company",
+            "field": "parentCompany"
+        },
+        {
+            "headerName": "Phone Number",
+            "field": "phoneNumber"
+        },
+        {
+            "headerName": "Category Name",
+            "field": "categoryName"
+        },
+        {
+            "headerName": "Cycle Name",
+            "field": "cycleName"
+        },
+        {
+            "headerName": "Price Book",
+            "field": "planName"
+        },
+        {
+            "headerName": "External Id",
+            "field": "externalAccountId"
+        },
+        {
+            "headerName": "Created Date",
+            "field": "createdDate"
+        },
+        {
+            "headerName": "Account Status",
+            "field": "accountStatus"
+        },
+        {
+            "headerName": "Billable",
+            "field": "billable"
+        },
+        {
+            "headerName": "Account Details777",
+            "field": "accountDetailDescription01"
+        }
+    ]
+}
