--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   "private": true,
   "dependencies": {
     "@ag-grid-community/angular": "^29.0.0",
-    "@ag-grid-community/core": "^29.0.0",
-    "@ag-grid-community/styles": "^29.0.0",
     "@ag-grid-community/client-side-row-model": "^29.0.0",
-    "@ag-grid-community/infinite-row-model": "^29.0.0",
+    "@ag-grid-community/core": "^29.0.0",
     "@ag-grid-community/csv-export": "^29.0.0",
-    "@ag-grid-enterprise/core": "^29.0.0",
+    "@ag-grid-community/infinite-row-model": "^29.0.0",
+    "@ag-grid-community/styles": "^29.0.0",
     "@ag-grid-enterprise/charts": "^29.0.0",
-    "@ag-grid-enterprise/sparklines": "^29.0.0",
     "@ag-grid-enterprise/clipboard": "^29.0.0",
     "@ag-grid-enterprise/column-tool-panel": "^29.0.0",
+    "@ag-grid-enterprise/core": "^29.0.0",
     "@ag-grid-enterprise/excel-export": "^29.0.0",
     "@ag-grid-enterprise/filter-tool-panel": "^29.0.0",
     "@ag-grid-enterprise/master-detail": "^29.0.0",
     "@ag-grid-enterprise/menu": "^29.0.0",
+    "@ag-grid-enterprise/multi-filter": "^29.0.0",
     "@ag-grid-enterprise/range-selection": "^29.0.0",
     "@ag-grid-enterprise/rich-select": "^29.0.0",
     "@ag-grid-enterprise/row-grouping": "^29.0.0",
     "@ag-grid-enterprise/server-side-row-model": "^29.0.0",
     "@ag-grid-enterprise/set-filter": "^29.0.0",
-    "@ag-grid-enterprise/multi-filter": "^29.0.0",
     "@ag-grid-enterprise/side-bar": "^29.0.0",
+    "@ag-grid-enterprise/sparklines": "^29.0.0",
     "@ag-grid-enterprise/status-bar": "^29.0.0",
     "@ag-grid-enterprise/viewport-row-model": "^29.0.0",
     "@angular/animations": "~12.2.0",
@@ -44,6 +44,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@syncfusion/ej2-angular-dropdowns": "16.3.17",
+    "ngx-quill": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typescript-require": "^0.3.0",
