--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@syncfusion/ej2-angular-dropdowns": "16.3.17",
-    "ngx-quill": "^14.0.0",
+    "ngx-quill": "^15.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typescript-require": "^0.3.0",
@@ -56,6 +57,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.55",
+    "@types/quill": "^1.3.10",
     "@types/webpack-env": "^1.18.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
