--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@angular/router": "~12.2.0",
     "@syncfusion/ej2-angular-dropdowns": "16.3.17",
     "ngx-quill": "^15.0.0",
+    "quill-emoji": "^0.2.0",
+    "quill-mention": "^3.1.0",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
