--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8383",
-    "build": "ng build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -43,19 +43,19 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@syncfusion/ej2-angular-dropdowns": "16.3.17",
+    "@syncfusion/ej2-angular-dropdowns": "^20.4.53",
     "ngx-quill": "^15.0.0",
+    "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
     "quill-mention": "^3.1.0",
-    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "typescript-require": "^0.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
-    "@angular/cli": "~12.2.18",
+    "@angular-devkit/build-angular": "^12.2.16",
+    "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.55",
